2006-05-28  Michael Natterer  <mitch@gimp.org>

	* app/core/gimppalette-import.[ch]: added support for extracting
	colors from the selected pixels only.

	* app/dialogs/palette-import-dialog.c: added "Sample merged" and
	"Selected Pixels only" toggles. Fixes bug #316212. Cleaned up the
	code quite a bit.

2006-05-28  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpcolorpickertool.c (gimp_color_picker_tool_picked):
	removed all code except info dialog updating and chain up instead.

	* app/tools/gimpcolortool.c (gimp_color_tool_real_picked): newly
	added default implementation. Also updates the colormap dialog and
	picks into a palette.

	* app/tools/gimppainttool.c (gimp_paint_tool_color_picked):
	removed. The default impl. does this and much more now. Hopefully
	fixes bug #320660.

2006-05-27  Akkana Peck  <akkana@cvs.gnome.org>

	* plug-ins/script-fu/scripts/reverse-layers.scm: if any layers
        are opaque, make them transparent when reversing. Current CVS
        allows moving opaque layers above the bottom, but that might change.

2006-05-27  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage-crop.c (gimp_image_crop_guess_bgcolor):
	remove code duplication, cleanup.

2006-05-27  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage.h: fix spacing broken by tab removal.

2006-05-27  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/enumcode.pl: cast the return value of
	gimp_enums_get_type_names() to (const gchar **) to fix compiler
	warning.

	* libgimp/gimpenums.c.tail: regenerated.

2006-05-26  Manish Singh  <yosh@gimp.org>

	* gimp.pc.in: define datarootdir, so we work with newer autoconf.

2006-05-26  Michael Natterer  <mitch@gimp.org>

	* plug-ins/script-fu/scripts/reverse-layers.scm: new script from
	Akkana Peck which reverses the layers in an image.

2006-05-26  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/dicom.c: applied patch from Dov Grobgeld 
	with several fixes for dicom loading, fixes bug #163256.
